--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/style.css" rel="stylesheet">
     <link href="/static/css/auth/login.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery.latest-min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- <link href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
     <title>Instagram</title>
@@ -16,12 +16,14 @@
         <div class="container">
             <div class="main-content">
                 <section class="image-section">
-                    <img src="/image/images/main-phone-image" alt="메인 이미지">
+                    <img src="/static/image/images/main-phone-image.png" alt="메인 이미지">
+                    <!-- <img src="/image/images/main-phone-image" alt="메인 이미지"> -->
                 </section>
                 <section class="auth-section">
                     <form class="flex-column login-form" action="/auth/login" method="post">
                         <div class="logo-div">
-                            <img src="/image/images/instagram-char-log.png" alt="인스타그램 글자 로고">
+                            <img src="/static/image/logos/instagram-char-log.png" alt="인스타그램 글자 로고">
+                            <!-- <img src="/image/images/instagram-char-log.png" alt="인스타그램 글자 로고"> -->
                         </div>
                         <div class="flex-column">
                             <input type="text" class="auth-input" placeholder="전화번호, 사용자 이름 또는 이메일">
@@ -35,7 +37,8 @@
                         </div>
                         <div class="flex-column">
                             <div class="auth-facebook">
-                                <img src="/image/images/facebook-logo" alt="페이스북 로고">
+                                <img src="/static/image/logos/facebook-logo.png" alt="페이스북 로고">
+                                <!-- <img src="/image/images/facebook-logo" alt="페이스북 로고"> -->
                                 <button class="login-by-facebook" type="button">Facebook으로 로그인</button>
                             </div>
                             <p class="forgot-password-p">비밀번호를 잊으셨나요?</p>
@@ -49,8 +52,10 @@
                         <div class="flex-column">
                             <span class="notice-span">앱을 다운로드하세요.</span>
                             <div class="company-logo-div">
-                                <img src="/image/images/google-play-store-logo" alt="구글 플레이스토어">
-                                <img src="/image/images/microsoft-logo" alt="마이크로소프트">
+                                <img src="/static/image/logos/google-play-store-logo.png" alt="구글 플레이스토어">
+                                <img src="/static/image/logos/microsoft-logo.png" alt="마이크로소프트">
+                                <!-- <img src="/image/images/google-play-store-logo" alt="구글 플레이스토어">
+                                <img src="/image/images/microsoft-logo" alt="마이크로소프트"> -->
                             </div>
                         </div>
                     </div>
