--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -22,49 +22,47 @@
                     </div>
                     <nav>
                         <ul class="aside-ul">
-                            <li>
+                            <li class="home-li">
                                 <div>
                                     <i class="fa-solid fa-house"></i>
                                 </div>
-                                홈
+                                <span>홈</span>
                             </li>
-                            <li>
+                            <li class="search-li">
                                 <div>
                                     <i class="fa-solid fa-magnifying-glass"></i>
                                 </div>
-                                검색
+                                <span>검색</span>
                             </li>
-                            <li>
+                            <li class="exploration-li">
                                 <div>
                                     <i class="fa-regular fa-compass"></i>
                                 </div>
-                                탐색 탭
+                                <span>탐색 탭</span>
                             </li>
-                            <li>
+                            <li class="direct-message-li">
                                 <div>
                                     <i class="fa-regular fa-paper-plane"></i>
                                 </div>
-                                메시지
+                                <span>메시지</span>
                             </li>
-                            <li>
+                            <li class="alert-li">
                                 <div>
                                     <i class="fa-regular fa-heart"></i>
                                 </div>
-                                <!-- <i class="fa-solid fa-heart"></i> -->
-                                알림
+                                <span>알림</span>
                             </li>
-                            <li>
+                            <li class="create-li">
                                 <div>
                                     <i class="fa-regular fa-square-plus"></i>
                                 </div>
-                                <!-- <i class="fa-solid fa-square-plus"></i> -->
-                                만들기
+                                <span>만들기</span>
                             </li>
                             <li class="user-profile-li">
                                 <div>
                                     <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
                                 </div>
-                                프로필
+                                <span>프로필</span>
                             </li>
                         </ul>
                     </nav>
@@ -73,7 +71,7 @@
                     <div>
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                    더 보기
+                    <span>더 보기</span>
                 </div>
             </aside>
             <div class="main-content">
@@ -164,6 +162,7 @@
                                 <button class="request-comment-write-button">게시</button>
                             </div>
                         </article>
+
                         <article class="board-article">
                             <div class="board-header flex-align-center">
                                 <div class="user-image-div flex-align-center">
@@ -229,6 +228,7 @@
                                 <button class="request-comment-write-button">게시</button>
                             </div>
                         </article>
+
                         <article class="board-article">
                             <div class="board-header flex-align-center">
                                 <div class="user-image-div flex-align-center">
