--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -66,12 +66,27 @@
                             </li>
                         </ul>
                     </nav>
-                </div>
-                <div class="more-menu-div">
-                    <div>
-                        <i class="fa-solid fa-bars"></i>
+                    <div class="more-menu-div">
+                        <div>
+                            <i class="fa-solid fa-bars"></i>
+                        </div>
+                        <span>더 보기</span>
                     </div>
-                    <span>더 보기</span>
+                </div>
+                <div class="main-search-div visible">
+                    <div class="search-div">
+                        <div class="search-header">
+                            <h1>검색</h1>
+                        </div>
+                        <div class="search-input-div">
+                            <input class="search-input" type="search" placeholder="검색">
+                        </div>
+                    </div>
+                    <div class="searh-result-div">
+                        <div class="search-notice-div">
+                            <h1>최근 검색 항목</h1>
+                        </div>
+                    </div>
                 </div>
             </aside>
             <div class="main-content">
