--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -88,6 +88,80 @@
                         </div>
                     </div>
                 </div>
+                <div class="main-alert-div visible">
+                    <div class="alert-header">
+                        <h1>알림</h1>
+                    </div>
+                    <div class="this-weekend-alert-div border-bottom">
+                        <p class="alert-notice-p">이번 주</p>
+                        <ul class="alert-ul">
+                            <li>
+                                <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                <span>
+                                    <span class="user-nickname-span">테스트</span>
+                                    님이 회원님을 팔로우하기 시작했습니다.
+                                    <span class="alert-date">1일</span>
+                                </span>
+                                <button class="follow-request-button" type="button">팔로잉</button>
+                            </li>
+                            <li>
+                                <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                <span>
+                                    <span class="user-nickname-span">테스트</span>
+                                    님이 회원님을 팔로우하기 시작했습니다.
+                                    <span class="alert-date">1일</span>
+                                </span>
+                                <button class="follow-request-button" type="button">팔로잉</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="this-month-alert-div border-bottom">
+                        <p class="alert-notice-p">이번 달</p>
+                        <ul class="alert-ul">
+                            <li>
+                                <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                <span>
+                                    <span class="user-nickname-span">테스트</span>
+                                    님이 회원님을 팔로우하기 시작했습니다.
+                                    <span class="alert-date">1일</span>
+                                </span>
+                                <button class="follow-request-button" type="button">팔로잉</button>
+                            </li>
+                            <li>
+                                <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                <span>
+                                    <span class="user-nickname-span">테스트</span>
+                                    님이 회원님을 팔로우하기 시작했습니다.
+                                    <span class="alert-date">1일</span>
+                                </span>
+                                <button class="follow-request-button" type="button">팔로잉</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="past-alert-div">
+                        <p class="alert-notice-p">이전 활동</p>
+                        <ul class="alert-ul">
+                            <li>
+                                <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                <span>
+                                    <span class="user-nickname-span">테스트</span>
+                                    님이 회원님을 팔로우하기 시작했습니다.
+                                    <span class="alert-date">1일</span>
+                                </span>
+                                <button class="follow-request-button" type="button">팔로잉</button>
+                            </li>
+                            <li>
+                                <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                <span>
+                                    <span class="user-nickname-span">테스트</span>
+                                    님이 회원님을 팔로우하기 시작했습니다.
+                                    <span class="alert-date">1일</span>
+                                </span>
+                                <button class="follow-request-button" type="button">팔로잉</button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </aside>
             <div class="main-content">
                 <section class="story-section">
